# shiftregister

./: .eil.yml  CMakeLists.txt  README.md  idf_component.yml  shiftregister.c  shiftregister_gpio.c
.github/workflows/: publish-esp-component.yml  validate-esp-component.yml
docs/: Makefile  index.rst
examples/example2/main/: example2.c  idf_component.yml
examples/sipo/: CMakeLists.txt  README.md
examples/sipo/main/: idf_component.yml  main.c
include/: shiftregister.h  shiftregister_gpio.h
